# neuralnet-ui

./: .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: CompilerWarnings.cmake
include/neuralnet-ui/: net_background.h  render_net_topology.h  render_neural_net.h  tiny_text.h
src/: net_background.cpp  render_net_topology.cpp  render_neural_net.cpp  tiny_text.cpp
